feat(network): Use Cloudflare Tunnel
It's much easier to expose on the Internet.

--- a/speedtest-tracker/.env.tmpl
+++ b/speedtest-tracker/.env.tmpl
@@ -4,4 +4,4 @@ DB_HOSTNAME=speedtest_tracker_database
 DB_DATABASE_NAME=speedtest_tracker
 DB_USERNAME=postgres
 DB_PASSWORD=""
-TS_AUTHKEY=""
+TUNNEL_TOKEN=""
