style(compose): YAML doesn't need quotations
For many cases, don't need to quote strings.

--- a/immich/.env.tmpl
+++ b/immich/.env.tmpl
@@ -1,5 +1,5 @@
 DB_HOSTNAME=immich_postgres
 DB_DATABASE_NAME=immich
 DB_USERNAME=postgres
-DB_PASSWORD=""
-TUNNEL_TOKEN=""
+DB_PASSWORD=
+TUNNEL_TOKEN=
