--- a/speedtest-tracker/.env.tmpl
+++ b/speedtest-tracker/.env.tmpl
@@ -1,7 +1,7 @@
-APP_KEY=""
+APP_KEY=
 SPEEDTEST_SERVERS=21569
 DB_HOSTNAME=speedtest_tracker_database
 DB_DATABASE_NAME=speedtest_tracker
 DB_USERNAME=postgres
-DB_PASSWORD=""
-TUNNEL_TOKEN=""
+DB_PASSWORD=
+TUNNEL_TOKEN=
