feat(compose): Backup to local and object storage
Automatically backup 2 different places.

--- a/speedtest-tracker/.env.tmpl
+++ b/speedtest-tracker/.env.tmpl
@@ -1,7 +1,10 @@
 APP_KEY=
 SPEEDTEST_SERVERS=21569
-DB_HOSTNAME=speedtest_tracker_database
+DB_HOSTNAME=speedtest-tracker_database
 DB_DATABASE_NAME=speedtest_tracker
 DB_USERNAME=postgres
 DB_PASSWORD=
+R2_BUCKET_NAME=
+R2_PATH=backup
+BACKUP_DIR=
 TUNNEL_TOKEN=
