--- a/immich/.env.tmpl
+++ b/immich/.env.tmpl
@@ -2,4 +2,7 @@ DB_HOSTNAME=immich_postgres
 DB_DATABASE_NAME=immich
 DB_USERNAME=postgres
 DB_PASSWORD=
+R2_BUCKET_NAME=
+R2_PATH=backup
+BACKUP_DIR=
 TUNNEL_TOKEN=
