--- a/misskey/.env.tmpl
+++ b/misskey/.env.tmpl
@@ -3,4 +3,7 @@ DB_HOSTNAME=database
 DB_DATABASE_NAME=misskey
 DB_USERNAME=postgres
 DB_PASSWORD=
+R2_BUCKET_NAME=
+R2_PATH=backup
+BACKUP_DIR=
 TUNNEL_TOKEN=
