refactor(compose): Merge all R2 bucket into one
Separate by paths which names are service name.

--- a/misskey/.env.tmpl
+++ b/misskey/.env.tmpl
@@ -3,7 +3,6 @@ DB_HOSTNAME=database
 DB_DATABASE_NAME=misskey
 DB_USERNAME=postgres
 DB_PASSWORD=
-R2_BUCKET_NAME=
-R2_PATH=backup
+R2_PATH=misskey
 BACKUP_DIR=
 TUNNEL_TOKEN=
