--- a/paperless/.env.tmpl
+++ b/paperless/.env.tmpl
@@ -2,7 +2,6 @@ DB_HOSTNAME=database
 DB_DATABASE_NAME=paperless
 DB_USERNAME=postgres
 DB_PASSWORD=
-R2_BUCKET_NAME=
-R2_PATH=backup
+R2_PATH=paperless
 BACKUP_DIR=
 TUNNEL_TOKEN=
