--- a/speedtest-tracker/.env.tmpl
+++ b/speedtest-tracker/.env.tmpl
@@ -3,7 +3,6 @@ DB_HOSTNAME=speedtest-tracker_database
 DB_DATABASE_NAME=speedtest_tracker
 DB_USERNAME=postgres
 DB_PASSWORD=
-R2_BUCKET_NAME=
-R2_PATH=backup
+R2_PATH=speedtest-tracker
 BACKUP_DIR=
 TUNNEL_TOKEN=
