--- a/immich/.env.tmpl
+++ b/immich/.env.tmpl
@@ -2,7 +2,6 @@ DB_HOSTNAME=immich_database
 DB_DATABASE_NAME=immich
 DB_USERNAME=postgres
 DB_PASSWORD=
-R2_BUCKET_NAME=
-R2_PATH=backup
+R2_PATH=immich
 BACKUP_DIR=
 TUNNEL_TOKEN=
