--- a/immich/.env.tmpl
+++ b/immich/.env.tmpl
@@ -3,5 +3,9 @@ DB_DATABASE_NAME=immich
 DB_USERNAME=postgres
 DB_PASSWORD=
 R2_PATH=immich
+WEBDAV_URL=
+WEBDAV_PATH=
+WEBDAV_USERNAME=
+WEBDAV_PASSWORD=
 BACKUP_DIR=
 TUNNEL_TOKEN=
